SERVER-13265 Fix race condition in mongorestore startup